--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "勤怠管理システム", root_path, id: "logo" %>
+    <%= link_to "在庫一覧", root_path, id: "logo" %> <!--エラーがでる場合<div>在庫一覧</div>にする-->
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ホーム", root_path %></li>
-        <li><%= link_to "ログイン", '#' %></li>
+        <div class="btn btn-primary">新規登録</div>
       </ul>
     </nav>
   </div>
